# Alpha_3

./: .gitignore  Elevation1.1.digcalc  PDF Test 1.digcalc  Refactor1.1.digcalc  Task.md  Test 2.digcalc  Test file 1.digcalc  Test3.1.digcalc  Test4.1.digcalc  coverage.xml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
digcalc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
digcalc_project/: Next_Steps.md  README.md  TASK.md  __init__.py  fix_encoding.py  requirements.txt  run_digcalc.py
digcalc_project/src/: __init__.py  exceptions.py  main.py
digcalc_project/src/controllers/: __init__.py  pdf_controller.py
digcalc_project/src/core/: __init__.py
digcalc_project/src/core/calculations/: __init__.py  mass_haul.py  volume_calculator.py
digcalc_project/src/core/geometry/: __init__.py  grid_generator.py  surface_builder.py  tin_generator.py
digcalc_project/src/core/importers/: __init__.py  csv_parser.py  dxf_importer.py  dxf_parser.py  file_parser.py  landxml_parser.py  pdf_parser.py
digcalc_project/src/core/reporting/: __init__.py  haul_chart.py  pdf_report.py
digcalc_project/src/models/: __init__.py  calculation.py  layer.py  pdf_document.py  project.py  project_scale.py  region.py  serializers.py  surface.py
digcalc_project/src/services/: __init__.py  csv_writer.py  layer_service.py  pdf_service.py  settings_service.py
digcalc_project/src/tools/: __init__.py  daylight_offset_tool.py  spline.py
digcalc_project/src/ui/: __init__.py  interactive_graphics_view.py  layer_control_panel.py  main_window.py  project_controller.py  project_panel.py  properties_dock.py  tracing_scene.py  visualization_panel.py
digcalc_project/src/ui/3d/: __init__.py  pv_view.py
digcalc_project/src/ui/commands/: __init__.py  bulk_offset_z_command.py  edit_vertex_z_command.py  interpolate_segment_z_command.py  move_vertex_command.py  (+5 more)
digcalc_project/src/utils/: __init__.py  color_maps.py  logging_utils.py  singleton.py
digcalc_project/src/visualization/: __init__.py  pdf_renderer.py
digcalc_project/tests/: __init__.py  conftest.py
digcalc_project/tests/core/: __init__.py  test_lowest_surface.py
digcalc_project/tests/models/: conftest.py  test_project.py  test_project_scale.py  test_project_scale_world_px.py
digcalc_project/tests/reporting/: test_pdf_export_smoke.py
digcalc_project/tests/services/: test_pdf_service.py
digcalc_project/tests/ui/: test_pdf_thumbnail_dock.py  test_pv_view.py  test_scale_action_enabled.py  test_visualization_panel.py
src/ui/: tracing_scene.py
src/ui/dialogs/: report_dialog.py
tests/: conftest.py  test_cutfill_map.py  test_project_migration.py  test_project_serialise.py  test_surface_rebuild.py
tests/calculations/: test_mass_haul.py  test_mass_haul_overhaul.py  test_slice_volume_math.py  test_slice_volumes.py  test_stripping_depth.py
tests/controllers/: test_pdf_controller.py
tests/core/: test_lowest_surface_flat.py
tests/models/: conftest.py  test_layer_color.py  test_layer_visible.py  test_project_migration.py  test_project_scale.py  test_serializers.py
tests/services/: test_settings_service.py
tests/tools/: test_daylight_offset.py  test_daylight_offset_distance.py  test_daylight_offset_tool.py  test_sample_compression.py  test_spline.py  test_spline_density.py  test_spline_path.py  test_spline_sample.py
tests/tracing/: __init__.py  test_move_vertex_merge.py
tests/ui/: test_interpolate_mode.py  test_layer_colors.py  test_layer_legend.py  test_pad_elevation_dialog.py  test_properties_dock.py  test_scale_calibration.py  test_scale_warning.py  test_tracing_toggle.py  test_visualization_panel.py
tests/ui/dialogs/: __init__.py  test_scale_entry.py
tests/ui/scene/: __init__.py  test_trace_scale.py
(+28 files in other folders)
